@startuml Class Diagram - Médiathèque E-Library

' Configuration
skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam groupInheritance 2

title Diagramme de Classes Complet - E-Library (Code Réel)

' ============================================
' CORE FRAMEWORK
' ============================================

package "Core Framework" <<Rectangle>> {

  abstract class Controller {
    + render(view: string, data: array, title: string): void
    + renderWithoutLayout(view: string, data: array): void
  }

  abstract class Model {
    # pdo: PDO
    # table: string
    + __construct()
    + findAll(): array
    + findById(id: int): array|false
    + create(data: array): int
    + update(id: int, data: array): bool
    + delete(id: int): bool
  }

  class Router {
    + dispatch(controller: string, action: string): void
    - error404(): void
  }

  class Auth <<static>> {
    {static} + check(): bool
    {static} + user(): array|null
    {static} + hasRole(role: string): bool
    {static} + requireRole(role: string): void
    {static} + requireAuth(): void
    {static} + isStaff(): bool
    {static} + requireStaff(): void
  }

  class Database <<Singleton>> {
    {static} - instance: PDO|null
    {static} + getInstance(): PDO
    {static} + getPDO(): PDO
    {static} + isConnected(): bool
    - __construct()
    - __clone()
    + __wakeup()
  }

}

' ============================================
' MODELS
' ============================================

package "Models (Business Layer)" <<Rectangle>> {

  class Utilisateur extends Model {
    # table = 'utilisateur'
    --
    + findByEmail(email: string): array|false
    + createUser(data: array): array|false
    + verifyCredentials(email: string, password: string): array|false
  }

  class Ressource extends Model {
    + getAll(): array
    + findById(id: int): array|false
    + getAverageRating(id: int): float
    + getEvaluationCount(id: int): int
    + getGenres(id: int): array
    + getThemes(id: int): array
    + getEvaluations(id: int): array
    + getNewest(limit: int = 10): array
    + getTopRated(limit: int = 10, minEval: int = 1): array
    + getByTheme(idTheme: int): array
    {static} + buildImagePath(ressource: array): string
    + search(criteria: array): array
  }

  class Livre extends Model {
    # table = 'livre'
    --
    + getAllWithDetails(): array
    + findByIdWithDetails(id: int): array|false
    + isbnExists(isbn: string, excludeId: int = null): bool
    + getGenreIds(id: int): array
    + getThemeIds(id: int): array
    + create(data: array): int
    + update(id: int, data: array): bool
    + delete(id: int): bool
  }

  class Film extends Model {
    # table = 'film'
    --
    + getAllWithDetails(): array
    + findByIdWithDetails(id: int): array|false
    + getGenreIds(id: int): array
    + getThemeIds(id: int): array
    + create(data: array): int
    + update(id: int, data: array): bool
    + delete(id: int): bool
  }

  class Genre extends Model {
    # table = 'genre'
    --
    + getAll(): array
    + findById(id: int): array|false
    + existsByName(nom: string, excludeId: int = null): bool
    + create(nom: string): int
    + update(id: int, nom: string): bool
    + delete(id: int): bool
  }

  class Theme extends Model {
    # table = 'theme'
    --
    + getAll(): array
    + findById(id: int): array|false
    + existsByName(nom: string, excludeId: int = null): bool
    + create(nom: string): int
    + update(id: int, nom: string): bool
    + delete(id: int): bool
  }

  class Evaluation extends Model {
    # table = 'evaluation'
    --
    + hasUserEvaluated(idUser: int, idRessource: int): bool
    + createEvaluation(idUser: int, idRessource: int, note: float, critique: string = null): bool
    + getAverage(idRessource: int): float|null
    + countForRessource(idRessource: int): int
    + getByRessource(idRessource: int): array
  }

}

' ============================================
' CONTROLLERS
' ============================================

package "Controllers (Application Layer)" <<Rectangle>> {

  class HomeController extends Controller {
    - ressourceModel: Ressource
    - themeModel: Theme
    --
    + __construct()
    + index(): void
  }

  class AuthController extends Controller {
    - userModel: Utilisateur
    --
    + __construct()
    + index(): void
    + login(): void
    + loginPost(): void
    + register(): void
    + registerPost(): void
    + logout(): void
  }

  class CatalogueController extends Controller {
    - ressourceModel: Ressource
    --
    + __construct()
    + index(): void
    + nouveautes(): void
    + top(): void
    + selection(): void
    + search(): void
  }

  class RessourceController extends Controller {
    - ressourceModel: Ressource
    - evaluationModel: Evaluation
    --
    + __construct()
    + index(): void
    + show(): void
  }

  class AdminController extends Controller {
    + index(): void
  }

  class GenreController extends Controller {
    - genreModel: Genre
    --
    + __construct()
    + index(): void
    + create(): void
    + createPost(): void
    + edit(): void
    + editPost(): void
    + delete(): void
  }

  class ThemeController extends Controller {
    - themeModel: Theme
    --
    + __construct()
    + index(): void
    + create(): void
    + createPost(): void
    + edit(): void
    + editPost(): void
    + delete(): void
  }

  class LivreController extends Controller {
    - livreModel: Livre
    - genreModel: Genre
    - themeModel: Theme
    --
    + __construct()
    + index(): void
    + create(): void
    + createPost(): void
    + edit(): void
    + editPost(): void
    + delete(): void
  }

  class FilmController extends Controller {
    - filmModel: Film
    - genreModel: Genre
    - themeModel: Theme
    --
    + __construct()
    + index(): void
    + create(): void
    + createPost(): void
    + edit(): void
    + editPost(): void
    + delete(): void
  }

  class EvaluationController extends Controller {
    - evaluationModel: Evaluation
    - ressourceModel: Ressource
    --
    + __construct()
    + create(): void
    + createPost(): void
  }

}

' ============================================
' RELATIONSHIPS
' ============================================

' Model dependencies
Model ..> Database : uses
Utilisateur --|> Model
Ressource --|> Model
Livre --|> Model
Film --|> Model
Genre --|> Model
Theme --|> Model
Evaluation --|> Model

' Controller dependencies
HomeController --|> Controller
AuthController --|> Controller
CatalogueController --|> Controller
RessourceController --|> Controller
AdminController --|> Controller
GenreController --|> Controller
ThemeController --|> Controller
LivreController --|> Controller
FilmController --|> Controller
EvaluationController --|> Controller

' Controller → Model usage
HomeController --> Ressource
HomeController --> Theme
AuthController --> Utilisateur
CatalogueController --> Ressource
RessourceController --> Ressource
RessourceController --> Evaluation
GenreController --> Genre
ThemeController --> Theme
LivreController --> Livre
LivreController --> Genre
LivreController --> Theme
FilmController --> Film
FilmController --> Genre
FilmController --> Theme
EvaluationController --> Evaluation
EvaluationController --> Ressource

' Static usage
Controller ..> Auth : uses
Router ..> Controller : dispatches
Router ..> Auth : uses

' ============================================
' NOTES
' ============================================

note top of Database
  **Singleton Pattern**
  Une seule instance PDO
  partagée par tous les modèles
end note

note right of Auth
  **Classe statique**
  Gestion centralisée de
  l'authentification et
  des autorisations

  Rôles :
  - utilisateur
  - bibliothecaire
  - administrateur
end note

note bottom of Model
  **Base abstraite**
  Tous les modèles héritent
  et ont accès à $this->pdo
end note

note top of Livre
  **Transactions**
  create() et update()
  utilisent des transactions
  pour garantir l'intégrité
  (ressource + livre + genres + themes)
end note

note top of Film
  **Transactions**
  Même pattern que Livre
  (ressource + film + genres + themes)
end note

note bottom of Evaluation
  **Contrainte UNIQUE**
  Un utilisateur ne peut évaluer
  qu'une seule fois la même ressource
  (id_utilisateur, id_ressource)
end note

@enduml
